src/pages/Contact/Contact.css
@import url("https://fonts.googleapis.com/css2?family=Jost:wght@100;400;500;700&display=swap");

.contact h1 {
  font-size: 48px;
  font-weight: 500;
  line-height: 48px;
  margin-bottom: 32px;

  color: white;
}

.contact p {
  font-size: 16px;
  line-height: 26px;
  font-weight: 400;
  color: white;
}

.contact input {
  font-size: 15px;
  line-height: 26px;
}

.main-contact {
  width: 100%;
  height: 100%;
}

.contact {
  width: 100%;
  height: auto;
  margin-bottom: 150px;
}

.contact-container {
  background: #e7816b;
  border-radius: var(--Border-Radius);
  height: 480px;
  display: flex;
  padding: 0 96px;
  max-width: 1400px;
  margin: 0 auto;
  width: 95vw;
  overflow: hidden;
}
.contact-details {
  height: 100%;
  width: 100%;
  flex-basis: 55%;
  display: flex;
  justify-content: center;
  flex-direction: column;
  margin-right: 95px;
  position: relative;
  height: 349px;

  z-index: 1;
}

.contact-details::after {
  content: "";
  background-image: url(../../images/contact/desktop/bg-pattern-hero-desktop.svg);
  background-size: contain;
  background-position: left center;
  background-repeat: no-repeat;
  position: absolute;
  width: 100%;
  height: 140%;
  top: -20%;
  left: -15%;
  z-index: -1;
}

.contact-information {
  flex-basis: 45%;
  width: 100%;
  height: 100%;
  display: flex;
  flex-direction: column;
}

.forminformation {
  width: 100%;
  height: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.forminformation aside:focus-within {
  border-bottom: 2px solid white;
}

.form-inputs {
  display: flex;
  width: 100%;
  justify-content: space-between;
  padding: 10px;
  border-bottom: 1px solid white;
  height: 40px;
  align-items: center;
  overflow: hidden;
  padding-top: 0;
}

.form-input {
  display: flex;
  width: 100%;
  justify-content: space-between;
  padding: 10px;
  border-bottom: 1px solid white;
  height: 102px;
  align-items: flex-start;
  overflow: hidden;
  padding-top: 0;
  margin-bottom: 25px;
}

textarea {
  height: 100%;
}

.error-Info {
  width: 200px;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.error-Info em {
  font-size: 12px;
  line-height: 26px;
}

.form-inputs:not(:last-child) {
  margin-bottom: 15px;
}
input,
textarea {
  background: transparent;
  outline: none;
  color: white;
  border: none;
  width: 100%;
  font-size: 15px;
  font-weight: 500;
  line-height: 26px;
  margin-right: 5px;
}

input::placeholder,
textarea::placeholder {
  opacity: 0.5;
  color: white;
}

.submit {
  display: flex;
  justify-content: flex-end;
  width: 100%;
}

.submit button {
  padding: 17px 48px;
  text-transform: uppercase;
  font-size: 15px;
  line-height: 21.68px;
  letter-spacing: 1px;
  font-weight: 500;
  border: none;
  outline: none;
  cursor: pointer;
  border-radius: var(--Border-Radius);
  background: #ffffff;
  transition: 0.5s ease-in-out;
}

.submit button:hover {
  background: #ffad9b;
  color: #fff;
  transition: 0.5s ease-in-out;
}

@media screen and (max-width: 1100px) {
  .contact-details {
    margin-right: 2rem;
  }
}

@media screen and (max-width: 982px) {
  .contact h1 {
    font-size: 32px;
    line-height: 36px;
  }
  .contact p {
    font-size: 15px;
    line-height: 25px;
  }
  .contact-container {
    padding: 0 50px;
  }
}

@media screen and (max-width: 768px) {
  .contact-container {
    flex-direction: column;
    height: auto;
    justify-content: center;
    align-items: center;
    padding: 71px 58px;
  }
  .forminformation {
    margin-top: 40px;
  }
  .contact-details {
    flex-basis: 100%;
    margin: 0;
  }
  .contact-information {
    flex-basis: 100%;
  }
  .contact-details::after {
    display: none;
  }
}

@media screen and (max-width: 600px) {
  .main-contact {
    margin-top: 90px;
  }
  .contact-container {
    padding: 72px 24px;
  }
  .submit {
    justify-content: center;
  }
  .contact-details {
    text-align: center;
    width: 100%;
  }
  .contact-details::after {
    display: none;
  }
}

